logs/pylama-gjslint.log
Listing '.'...
Listing './bin'...
Compiling './bin/gflags2man.py'...
***   File "./bin/gflags2man.py", line 86
    def info(self, msg): print msg
                                 ^
SyntaxError: invalid syntax

Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Compiling './lib/python3.5/site-packages/gflags.py'...
***   File "./lib/python3.5/site-packages/gflags.py", line 1091
    except gflags_validators.Error, e:
                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mccabe-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycodestyle-2.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pydocstyle'...
Listing './lib/python3.5/site-packages/pydocstyle/data'...
Listing './lib/python3.5/site-packages/pydocstyle-2.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/pylama'...
Listing './lib/python3.5/site-packages/pylama/libs'...
Listing './lib/python3.5/site-packages/pylama/lint'...
Listing './lib/python3.5/site-packages/pylama-7.4.3.dist-info'...
Listing './lib/python3.5/site-packages/pylama_gjslint'...
Listing './lib/python3.5/site-packages/pylama_gjslint/closure_linter'...
Listing './lib/python3.5/site-packages/pylama_gjslint/closure_linter/common'...
Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/common/htmlutil.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/common/htmlutil.py", line 149
    except HTMLParser.HTMLParseError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/common/simplefileflags.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/common/simplefileflags.py", line 171
    print 'Skipping %d file(s).' % skipped
                               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/ecmalintrules.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/ecmalintrules.py", line 750
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/error_fixer.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/error_fixer.py", line 486
    print 'Fixed %d errors in %s' % (self._file_fix_count, self._file_name)
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/indentation.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/indentation.py", line 200
    print 'Line #%d: stack %r' % (token.line_number, stack)
                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pylama_gjslint/closure_linter/runner.py'...
***   File "./lib/python3.5/site-packages/pylama_gjslint/closure_linter/runner.py", line 161
    except ecmametadatapass.ParseError, parse_err:
                                      ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/pylama_gjslint-0.0.8.egg-info'...
Listing './lib/python3.5/site-packages/python_gflags-2.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/snowballstemmer'...
Listing './lib/python3.5/site-packages/snowballstemmer-1.2.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
